tests/baselines/reference/unusedFunctionsinNamespaces3.errors.txt
tests/cases/compiler/unusedFunctionsinNamespaces3.ts(3,9): error TS6132: Variable 'function1' has never been used.
tests/cases/compiler/unusedFunctionsinNamespaces3.ts(3,30): error TS6133: Parameter 'param1' has never been used.


==== tests/cases/compiler/unusedFunctionsinNamespaces3.ts (2 errors) ====
    
    namespace Validation {
        var function1 = function(param1:string) {
            ~~~~~~~~~
!!! error TS6132: Variable 'function1' has never been used.
                                 ~~~~~~~~~~~~~
!!! error TS6133: Parameter 'param1' has never been used.
        }
    }